tests/purs/failing/InfiniteKind2.out
Error found:
in module [33mInfiniteKind2[0m
at tests/purs/failing/InfiniteKind2.purs:5:23 - 5:27 (line 5, column 23 - line 5, column 27)

  An infinite kind was inferred for a type:
  [33m                    [0m
  [33m  (t5 -> t6) -> Type[0m
  [33m                    [0m

while checking that type [33mTree[0m
  has kind [33mt0[0m
while inferring the kind of [33mm Tree[0m
in data binding group Tree

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/InfiniteKind.md for more information,
or to contribute content related to this error.

